# InferiaLLM

./: .dockerignore  .env.example  .env.sample  .gitignore  API_GATEWAY_AUDIT_REPORT.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  DASHBOARD_CHANGES.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.localhost.yml  docker-compose.profiles.yml  docker-compose.sso.yml  docker-compose.yml  inferia.yaml.example  nginx.conf  postgres-init.sso.sql  pyproject.toml  setup.sh  setup_project.sh  test_nosana_logs.py
package/: LICENSE  MANIFEST.in  README.md  pyproject.toml  test_router.py
package/src/inferia/: cli.py  cli_init.py  cli_node.py  cli_providers.py  cli_worker.py  inferiadocs.py  startup_ui.py
package/src/inferia.egg-info/: PKG-INFO  entry_points.txt  requires.txt
package/src/inferia/common/: app_setup.py  config_manager.py  errors.py  logger.py  middleware.py  model_types.py
package/src/inferia/common/schemas/: common.py  embeddings.py
package/src/inferia/common/tests/: test_app_setup.py  test_circuit_breaker.py  test_exception_handlers.py  test_middleware.py  test_runtime_env.py
package/src/inferia/common/tests/unified_config/: conftest.py  test_base.py  test_cli_flag.py  test_dashboard_config.py  test_loader.py  test_phase_2_services.py  test_provider_seeder.py  test_schema.py  test_service_yaml_integration.py  test_source.py  test_yaml_no_hosting_or_ports.py
package/src/inferia/common/unified_config/: __init__.py  errors.py  loader.py  provider_seeder.py  schema.py  source.py
package/src/inferia/dashboard/: index.html
package/src/inferia/dashboard/assets/: index-9B-EqNSS.js  index-B4JldMVZ.js  index-BP-5UiXk.js  index-BXoeAiCe.js  index-BaWPsCEo.css  index-C1ocoWiY.js  index-C6-wTmh2.js  index-CH6DCCUa.css  index-CnVpzT2b.css  index-CnZDkQCG.css  index-DEQXf0gb.js  index-DG3mUsZT.css  index-DUlwZIu5.css  index-DxQYBWSj.js  index-OzCCOR7r.css  index-qHEZv9BG.js
package/src/inferia/gateways/filtration_gateway/: app.py
package/src/inferia/gateways/inference_gateway/: .env.example  README.md  app.py  client.py  config.py
package/src/inferia/gateways/inference_gateway/core/: orchestrator.py  service.py
package/src/inferia/gateways/orchestration_gateway/: README.md  config.py  requirements.txt
package/src/inferia/infra/schema/: global_schema.sql
package/src/inferia/infra/schema/migrations/: 20260306_add_pool_lifecycle_state.sql  20260313_add_media_logging.sql  20260318_add_audit_logs_org_id.sql  20260321_add_audit_logs_category.sql  20260402_add_retention_cleanup.sql  20260513_add_worker_agent_kind.sql  20260515_node_centric.sql  20260525_add_node_provisioning_events.sql  20260528_provisioning_jobs.sql  20260528a_node_state_failed.sql  20260528c_add_extra_to_node_provisioning_events.sql  20260530_pool_first_deployments.sql  20260603_model_cache.sql
package/src/inferia/services/api_gateway/: app.py  bootstrap_db.py  config.py  drop_db.py  main.py  reset_db.py
package/src/inferia/services/api_gateway/audit/: README.md  router.py  service.py
package/src/inferia/services/api_gateway/db/: database.py  security.py
package/src/inferia/services/api_gateway/gateway/: README.md  health_routes.py  http_client.py  internal_middleware.py  proxy_routes.py  rate_limiter.py  redis_pool.py  router.py  test_proxy_engine_ami.py
package/src/inferia/services/api_gateway/management/: api_keys.py  config_manager.py  configuration.py  deployments.py  insights.py  knowledge_base.py  organizations.py  prompts.py  router.py  users.py
package/src/inferia/services/api_gateway/policy/: engine.py
package/src/inferia/services/api_gateway/prompt/: README.md
package/src/inferia/services/api_gateway/rbac/: auth.py  authorization.py  catalog_declare.py  external_auth.py  inferia_auth_provider.py  initialization.py  jwks_verifier.py  local_identity_guard.py  middleware.py  oauth_client.py  oauth_router.py  permissions.py  roles_router.py  router.py  shadow_user.py  users_router.py
package/src/inferia/services/api_gateway/schemas/: auth.py  inference.py  insights.py  logging.py  management.py
package/src/inferia/services/api_gateway/tests/: conftest.py  test_api_key_security.py  test_app_startup_catalog.py  test_audit.py  test_audit_background.py  test_audit_immutability.py  test_audit_key_security.py  test_audit_org_filter.py  test_auth_middleware_cache.py  test_auth_security.py  test_catalog.py  test_catalog_declare.py  test_config.py  test_config_modes.py  test_config_security.py  test_deployment_management.py  test_encryption.py  test_external_org.py  test_gateway.py  test_gateway_error_handling.py  test_guardrail_proceed.py  test_hf_token_names_endpoint.py  test_huggingface_credentials.py  test_inference_log_background.py  test_inference_routing.py  test_integration.py  test_internal_auth_bypass.py  test_jwks_verifier.py  test_jwt_token_type.py  test_management_insights.py  test_masked_secret_guard.py  test_me_totp_external_mode.py  test_middleware_external.py  test_middleware_modes.py  test_oauth_client.py  test_oauth_router_modes.py  test_oidc_role_mapping.py  test_policy_engine_errors.py  test_proxy_models.py  test_rate_limit_bypass.py  (+7 more)
package/src/inferia/services/data/: app.py  config.py  config_manager.py  engine.py  middleware.py  parser.py  prompt_engine.py  prompt_templates.py  router.py
package/src/inferia/services/data/tests/: conftest.py  test_chunker.py  test_collection_scoping.py  test_prompt_engine.py  (+6 more)
package/src/inferia/services/filtration/: README.md  bootstrap_db.py  config.py  requirements.txt  reset_db.py
package/src/inferia/services/guardrail/: app.py  config.py  config_manager.py  engine.py  middleware.py  pii_service.py
package/src/inferia/services/inference/: README.md  app.py  client.py  config.py  main.py
package/src/inferia/services/orchestration/: ADAPTERS.md  API.md  API_VERIFICATION.md  Dockerfile  README.md  Requirements.txt  config.py  constants.py  grpc_auth_interceptor.py  middleware.py  server.py
package/src/inferia/tests/: test_cli_init_sql_injection.py  test_entrypoint_config_escaping.py
(+1413 files in other folders)
