[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferiallm"
version = "0.1.0b1"
description = "InferiaLLM: distributed inference, filtration, and compute orchestration platform"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache 2.0" }

authors = [
    { name = "Inferia AI" }
]

# -------------------------
# Core runtime dependencies
# -------------------------
dependencies = [
  # Web / API
  "fastapi==0.109.0",
  "uvicorn[standard]>=0.27,<0.30",
  "httpx>=0.27.0",
  "aiohttp>=3.8.5",

  # gRPC / Protobuf
  "grpcio==1.76.0",
  "grpcio-tools==1.76.0",
  "protobuf>=6.31.1,<7.0.0",

  # Data / Validation
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "email-validator>=2.1.0",

  # Auth / Security
  "python-jose[cryptography]",
  # PyJWT is used by the JWKS verifier in api_gateway/rbac/jwks_verifier.py
  # to validate Ed25519-signed tokens from inferia-auth when
  # AUTH_PROVIDER=external. Must be a core dep, not a dev-only one.
  "PyJWT[crypto]>=2.8",
  "bcrypt",
  "pyotp",
  "qrcode",
  "pillow",

  # Databases / Cache
  "asyncpg==0.31.0",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "greenlet",
  "jinja2",

  # ML / Filtration Core
  "chromadb",
  "pypdf",
  "python-docx",
  "groq",

  # Config
  "python-dotenv",
  "PyYAML>=6.0,<7.0",

  # Misc infra
  "cachetools",

  # Orchestration Core
  "python-multipart",
  "kubernetes==33.1.0",

  # Compute provisioning (Pulumi)
  "pulumi>=3.140.0,<4",
  "pulumi-aws>=6.50.0,<7",
  "pulumi-azure-native>=2.50.0,<3",
  "pulumi-gcp>=8.0.0,<9",

  # AWS SDK is imported transitively by the Pulumi-AWS adapter at
  # orchestration boot, so it must be a core dep — not an optional extra.
  # Without it the orchestration service fails fast with
  # `ModuleNotFoundError: No module named 'boto3'`.
  "boto3==1.42.10",
]

[project.urls]
Repository = "https://github.com/InferiaAI/InferiaLLM"
Documentation = "https://docs.inferia.ai/docs"

# ---------------------------------
# Optional: Compute Providers
# ---------------------------------
[project.optional-dependencies]
aws = [
  "boto3==1.42.10",
]
all-providers = [
  "boto3==1.42.10",
]
logstash = [
  "python-logstash>=0.4.6",
  "elasticsearch[async]>=8.0,<9.0",
]
elasticsearch = [
  "elasticsearch[async]>=8.0,<9.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "pytest-asyncio>=0.23",
  "pytest-mock",
  "pytest-httpserver>=1.0",
  "PyJWT[crypto]>=2.8",
  "respx>=0.21",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
# Top-level single-file modules (not packages) — find_packages does not pick these up.
py-modules = ["inferiadocs", "startup_events", "startup_ui"]

[tool.setuptools.packages.find]
where = ["src"]
# Tests live under src/tests/ for discovery but are NOT shipped in the wheel.
exclude = ["tests", "tests.*", "**/node_modules"]

[tool.setuptools.package-data]
# The flattened layout has no umbrella package, so data is keyed per
# top-level package. dashboard/ and infra/ are data-only packages
# (each carries an __init__.py so setuptools discovers them).
dashboard = ["**/*"]
infra = ["schema/*.sql", "schema/migrations/*.sql"]
orchestration = [
  "services/depin-sidecar/package.json",
  "services/depin-sidecar/tsconfig.json",
  "services/depin-sidecar/src/**/*",
  "services/depin-sidecar/dist/**/*",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "**/node_modules/**/*",
    "**/.env",
    "**/*.pyc",
    "**/__pycache__/**/*",
]

# -------------------------
# CLI entrypoint
# -------------------------
[project.scripts]
inferiallm = "cli:main"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
addopts = "-p no:twisted -p no:trio -p no:tornasync"
