[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferiallm"
version = "0.1.1"
description = "Inferia: distributed inference, filtration, and compute orchestration platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Business Source License 1.1" }

authors = [
    { name = "Hooman Digital LLP" },
    { name = "Meet Sonawane" },
    { name = "Chandra K Rajwal" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

# -------------------------
# Core runtime dependencies
# -------------------------
dependencies = [
  # Web / API
  "fastapi==0.109.0",
  "uvicorn[standard]>=0.27,<0.30",
  "httpx>=0.27.0",
  "aiohttp>=3.8.5",

  # gRPC / Protobuf
  "grpcio==1.76.0",
  "grpcio-tools==1.76.0",
  "protobuf>=6.31.1,<7.0.0",

  # Async / Concurrency
  "anyio>=4.0",

  # Data / Validation
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "email-validator>=2.1.0",

  # Auth / Security
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "bcrypt",
  "pyotp",
  "qrcode",
  "pillow",

  # Databases / Cache
  "asyncpg==0.31.0",
  "psycopg2-binary==2.9.11",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "greenlet",

  # Observability
  "prometheus-client",

  # Config
  "python-dotenv",

  # Misc infra
  "base58==2.1.1",
  "pynacl",
  "cachetools",

  # Others
  "python-multipart",
  "skypilot",
  "kubernetes==33.1.0",

  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "greenlet",
  "jinja2",
]

# ---------------------------------
# Optional: Cloud / Orchestration
# ---------------------------------
[project.optional-dependencies]
aws = [
  "boto3==1.42.10",
]

# ---------------------------------
# Optional: ML / Inference
# ---------------------------------
inference = [
  "numpy",
  "transformers>=4.40",
  "tokenizers>=0.21",
  "chromadb",
  "llm-guard",
  "presidio-analyzer",
  "spacy",
  "pypdf",
  "python-docx",
  "requests",
  "groq",
]

# ---------------------------------
# Optional: Testing
# ---------------------------------
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "pytest-asyncio>=0.23",
  "pytest-mock",
  "pytest-trio",
  "pytest-twisted",
  "pytest-tornasync",
]

[tool.setuptools.package-data]
inferia = [
  "dashboard/**/*",
  "infra/schema/*.sql",
  "services/orchestration/app/services/depin-sidecar/**/*"
]
# -------------------------
# CLI entrypoint
# -------------------------
[project.scripts]
inferia = "inferia.cli:main"

[project.urls]
Repository = "https://github.com/InferiaAI/InferiaLLM"
Documentation = "https://inferiallm.ai/docs"
