[project]
name = "inferiallm"
version = "1.0.5"
description = "InferiaLLM: distributed inference, filtration, and compute orchestration platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

authors = [
    { name = "Inferia AI" },
]

# -------------------------
# Core runtime dependencies
# -------------------------
dependencies = [
  # Web / API
  "fastapi==0.109.0",
  "uvicorn[standard]>=0.27,<0.30",
  "httpx>=0.27.0",
  "aiohttp>=3.8.5",

  # gRPC / Protobuf
  "grpcio==1.76.0",
  "grpcio-tools==1.76.0",
  "protobuf>=6.31.1,<7.0.0",

  # Async / Concurrency
  "anyio>=4.0",

  # Data / Validation
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "email-validator>=2.1.0",

  # Auth / Security
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "bcrypt",
  "pyotp",
  "qrcode",
  "pillow",

  # Databases / Cache
  "asyncpg==0.31.0",
  "psycopg2-binary==2.9.11",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "greenlet",

  # Observability
  "prometheus-client",

  # Config
  "python-dotenv",

  # Misc infra
  "base58==2.1.1",
  "pynacl",
  "cachetools",

  # Others
  "python-multipart",
  "skypilot",
  "kubernetes==33.1.0",
]

[project.urls]
Repository = "https://github.com/InferiaAI/InferiaLLM"
Documentation = "https://docs.inferia.ai/docs"

# ---------------------------------
# Optional: Cloud / Orchestration
# ---------------------------------
[project.optional-dependencies]
aws = [
  "boto3==1.42.10",
]
ml = [
  "numpy",
  "transformers>=4.40",
  "tokenizers>=0.21",
  "chromadb",
  "llm-guard",
  "presidio-analyzer",
  "spacy",
  "pypdf",
  "python-docx",
  "requests",
  "groq",
]
db = [
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "greenlet",
  "jinja2",
]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "pytest-asyncio>=0.23",
  "pytest-mock",
  "pytest-trio",
  "pytest-twisted",
  "pytest-tornasync",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["**/node_modules", "**/dist", "**/build"]

[tool.setuptools.package-data]
inferia = [
  "dashboard/**/*",
  "infra/schema/*.sql",
  "services/orchestration/app/services/depin-sidecar/package.json",
  "services/orchestration/app/services/depin-sidecar/tsconfig.json",
  "services/orchestration/app/services/depin-sidecar/src/**/*"
]

[tool.setuptools.exclude-package-data]
inferia = [
    "**/node_modules/**/*",
    "**/dist/**/*",
    "**/.env",
    "**/*.pyc",
    "**/__pycache__/**/*"
]

# -------------------------
# CLI entrypoint
# -------------------------
[project.scripts]
inferiallm = "inferia.cli:main"
