[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferiallm"
version = "0.1.0b1"
description = "InferiaLLM: distributed inference, filtration, and compute orchestration platform"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache 2.0" }

authors = [
    { name = "Inferia AI" }
]

# -------------------------
# Core runtime dependencies
# -------------------------
dependencies = [
  # Web / API
  "fastapi==0.109.0",
  "uvicorn[standard]>=0.27,<0.30",
  "httpx>=0.27.0",
  "aiohttp>=3.8.5",

  # gRPC / Protobuf
  "grpcio==1.76.0",
  "grpcio-tools==1.76.0",
  "protobuf>=6.31.1,<7.0.0",

  # Data / Validation
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "email-validator>=2.1.0",

  # Auth / Security
  "python-jose[cryptography]",
  "bcrypt",
  "pyotp",
  "qrcode",
  "pillow",

  # Databases / Cache
  "asyncpg==0.31.0",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "greenlet",
  "jinja2",

  # ML / Filtration Core
  "chromadb",
  "llm-guard",
  "pypdf",
  "python-docx",
  "groq",

  # Config
  "python-dotenv",

  # Misc infra
  "cachetools",

  # Orchestration Core
  "python-multipart",
  "kubernetes==33.1.0",
]

[project.urls]
Repository = "https://github.com/InferiaAI/InferiaLLM"
Documentation = "https://docs.inferia.ai/docs"

# ---------------------------------
# Optional: Compute Providers
# ---------------------------------
[project.optional-dependencies]
skypilot = [
  "skypilot[all]",
]
aws = [
  "boto3==1.42.10",
  "skypilot[aws]",
]
gcp = [
  "skypilot[gcp]",
]
azure = [
  "skypilot[azure]",
]
lambda = [
  "skypilot[lambda]",
]
runpod = [
  "skypilot[runpod]",
]
all-providers = [
  "boto3==1.42.10",
  "skypilot[aws,gcp,azure,lambda,runpod,kubernetes]",
]
logstash = [
  "python-logstash>=0.4.6",
  "elasticsearch[async]>=8.0,<9.0",
]
elasticsearch = [
  "elasticsearch[async]>=8.0,<9.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "pytest-asyncio>=0.23",
  "pytest-mock",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["**/node_modules"]

[tool.setuptools.package-data]
inferia = [
  "dashboard/**/*",
  "infra/schema/*.sql",
  "infra/schema/migrations/*.sql",
  "services/orchestration/services/depin-sidecar/package.json",
  "services/orchestration/services/depin-sidecar/tsconfig.json",
  "services/orchestration/services/depin-sidecar/src/**/*",
  "services/orchestration/services/depin-sidecar/dist/**/*",
]

[tool.setuptools.exclude-package-data]
inferia = [
    "**/node_modules/**/*",
    "**/.env",
    "**/*.pyc",
    "**/__pycache__/**/*"
]

# -------------------------
# CLI entrypoint
# -------------------------
[project.scripts]
inferiallm = "inferia.cli:main"
